# mago

./: Cargo.toml  README.md  SPONSORS.md
crates/analyzer/src/statement/: switch.rs
crates/embedded-languages/: Cargo.toml
crates/embedded-languages/src/: detection.rs  lib.rs  mapping.rs  region.rs
crates/embedded-languages/src/sql/: context.rs  functions.rs  mod.rs  schema.rs
crates/linter/src/: lib.rs
crates/linter/src/rule/best_practices/: prefer_static_closure.rs
crates/linter/src/rule/maintainability/: cyclomatic_complexity.rs  halstead.rs  kan_defect.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: cache.rs  convert.rs  error.rs  lib.rs  navigate.rs  server.rs  state.rs
crates/lsp/src/handlers/: code_action.rs  completion.rs  definition.rs  diagnostics.rs  document_symbols.rs  embedded.rs  formatting.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  rename.rs  signature_help.rs  text_sync.rs  workspace_symbol.rs
crates/lsp/tests/: integration_test.rs
crates/lsp/tests/fixtures/basic/: hello.php
crates/lsp/tests/fixtures/inheritance/: base.php  child.php  grandchild.php
crates/lsp/tests/fixtures/large_project/: base_service.php  db.php  order_service.php  sql_example.php
crates/lsp/tests/fixtures/namespace/: controller.php  models.php
crates/lsp/tests/fixtures/trait_use/: loggable.php  service.php
crates/syntax/src/ast/: node.rs
docs/: index.md
editors/vscode/: package-lock.json  package.json
editors/vscode/src/: extension.ts
src/: error.rs  main.rs
src/commands/: lsp.rs  mod.rs
