[package]
name = "mago-lsp"
description = "Language Server Protocol implementation for Mago PHP toolchain"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal crates
mago-atom = { workspace = true }
mago-embedded-languages = { workspace = true }
mago-codex = { workspace = true }
mago-database = { workspace = true }
mago-docblock = { workspace = true }
mago-formatter = { workspace = true }
mago-names = { workspace = true }
mago-orchestrator = { workspace = true }
mago-php-version = { workspace = true }
mago-prelude = { workspace = true }
mago-reporting = { workspace = true }
mago-span = { workspace = true }
mago-syntax = { workspace = true }
mago-text-edit = { workspace = true }

# LSP
lsp-server = { workspace = true }
lsp-types = { workspace = true }

# Utilities
bumpalo = { workspace = true }
crossbeam-channel = { workspace = true }
foldhash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
